# voxel

./: .gitignore  Cargo.toml  OPINIONS.md  PLANNING.md  README.md  RENDERING.md
___/: Cargo.toml
voxel/: Cargo.toml
voxel/src/: alloc_buffer.rs  block_library.rs  chunk.rs  data.rs  drain_filter.rs  generator.rs  instancing.rs  lib.rs  main.rs  math.rs  mesher.rs  plugin.rs  signed_axis.rs  terrain.rs  viewer.rs  voxel.rs  voxel_viewer.rs  voxel_volume.rs
voxel/src/asset/: mod.rs
voxel/src/assets/: block.rs  block_library.rs  block_library_v2.rs  load_folders.rs  mod.rs  texture_array.rs  textures.rs  walking.rs
voxel/src/block_lib/: block.rs  intermediate.rs  mod.rs  texture_array.rs
voxel/src/block_library/: block.rs  intermediate.rs  mod.rs  raw.rs  shared.rs  texture_array.rs  v2.rs
voxel/src/chunk/: data.rs  generator.rs  mesher.rs  mod.rs  space.rs  task.rs
voxel/src/core/: bounded_int.rs  mod.rs
voxel/src/data/: bits.rs  brick.rs  chunk.rs  mod.rs  object.rs  octree.rs  raw_chunk.rs  volume.rs  voxel.rs  voxel_volume.rs
voxel/src/data/chunk/: mod.rs
voxel/src/data/chunk/data_structures/: array_chunk.rs  mod.rs
voxel/src/data/object/: mod.rs
voxel/src/ecs/: chunk.rs  mod.rs  voxel_viewer.rs  voxel_volume.rs
voxel/src/generator/: mod.rs
voxel/src/math/: axis.rs  axis_permutation.rs  mod.rs  sign.rs  signed_axis.rs
voxel/src/mesher/: mod.rs
voxel/src/plugin/: mod.rs
voxel/src/render/: buffer.rs  buffer_allocator.rs  chunk.rs  draw.rs  instancing.rs  meshing.rs  mod.rs  pipeline.rs  texture_array.rs
voxel/src/tests/: mod.rs
voxel/src/utils/: mod.rs
(+66 files in other folders)
