[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
bevy = { workspace = true }
fastnoise-lite = "1.1.1"
ndshape = "0.3.0"
rand = "0.9.2"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
walkdir = "2.5.0"

[features]
dynamic = ["bevy/dynamic_linking"]
