[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true

anyhow = "1.0.98"
fastnoise-lite = "1.1.1"
ndshape = "0.3.0"
rand = "0.9.2"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
walkdir = "2.5.0"
dashmap = { version = "6.1.0", features = ["raw-api"] }
crossbeam = "0.8.4"
rayon = "1.11.0"
bytemuck = "1.23.2"
enum-map = { version = "2.7.3", features = ["serde"] }
parking_lot = "0.12.4"
offset-allocator = "0.2.0"
nonmax = "0.5.5"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "from", "into"] }
arc-swap = "1.7.1"

[features]
dynamic = ["bevy/dynamic_linking"]
